<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/android_login"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:overScrollMode="never" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:weightSum="1.0" >

            <!-- android:background="@drawable/backgroundlandscapever06 g12" -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight=".53" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_weight=".08"
                android:orientation="horizontal"
                android:weightSum="1" >

                <EditText
                    android:id="@+id/userid_et"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_edittext1"
                    android:gravity="center_vertical"
                    android:hint="Enter Username"
                    android:inputType="text"
                android:text="@string/name"
                    android:paddingLeft="@dimen/layer_padding"
                    android:textSize="@dimen/textsize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight=".04"
                android:orientation="horizontal" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_weight=".08"
                android:orientation="horizontal"
                android:weightSum="1" >

                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_edittext1"
                    android:gravity="center_vertical"
                    android:hint="Enter Password"
                android:text="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/layer_padding"

                    android:textSize="@dimen/textsize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_weight=".04"
                android:orientation="horizontal" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_weight=".10"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="90dp"

                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="4dp"
                        android:background="@drawable/buttoncustom"
                        android:gravity="center"
                        android:onClick="login"
                        android:text="@string/login_button_text"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textsize"
                        android:textStyle="italic|bold"
                        android:layout_height="match_parent" />
                    <!--android:layout_height="@dimen/button_height"-->

                    <requestFocus />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom" >
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>